# django-blog

./: .gitignore  pyproject.toml  requirements.txt
django_project/blog/: models.py  views.py
django_project/blog/migrations/: 0001_initial.py  0002_alter_post_date_posted.py
django_project/blog/templates/blog/: base.html  home.html  post_detail.html  user_posts.html
django_project/django_project/: settings.py  urls.py
django_project/users/: models.py
django_project/users/migrations/: 0001_initial.py
django_project/users/templates/users/: login.html  logout.html  password_reset_complete.html  register.html
