[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = ""
authors = ["Mykola Filippenko <mykolafilippenko@gmail.com>"]
readme = "README.md"
packages = [{include = "django_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
django-crispy-forms = "^2.0"
crispy-bootstrap4 = "^2022.1"
pillow = "^9.5.0"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
